<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/dcuf_btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_filter"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/dcuf_status_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/dcuf_btn_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/dcuf_status_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/status_item_all" />

            <RadioButton
                android:id="@+id/dcuf_status_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_item_0" />

            <RadioButton
                android:id="@+id/dcuf_status_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_item_1" />

            <RadioButton
                android:id="@+id/dcuf_status_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_item_2" />

            <RadioButton
                android:id="@+id/dcuf_status_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_item_3" />

            <RadioButton
                android:id="@+id/dcuf_status_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_item_4" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>