<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/dcnc_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dcnc_rg_class" />

        <TextView
            android:id="@+id/tv_Projeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Projeto"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dcnc_til_consumer_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Projeto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dcnc_et_consumer_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/consumer_unit_hint"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dcnc_til_meter_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dcnc_til_consumer_unit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dcnc_et_meter_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_meter_hint"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/dcnc_rg_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dcnc_til_client_name">

            <RadioButton
                android:id="@+id/dcnc_rb_class_residential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/residential_class" />

            <RadioButton
                android:id="@+id/dcnc_rb_class_rural"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rural_class" />

            <RadioButton
                android:id="@+id/dcnc_rb_class_commercial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commercial_class" />

            <RadioButton
                android:id="@+id/dcnc_rb_class_industrial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/industrial_class" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dcnc_til_client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dcnc_til_meter_client">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dcnc_et_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_name_hint"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:visibility="invisible" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>