<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mge.mobile.pphm.ui.search.SearchViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/icud_tv_consumer_unit_title"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/consumer_unit_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/icud_tv_consumer_unit"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{viewModel.consumerUnit.number}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_consumer_unit_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icud_tv_consumer_unit_title"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_consumer_unit_title" />

                <TextView
                    android:id="@+id/icud_tv_meter_number_title"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/client_meter_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icud_tv_consumer_unit_title"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/icud_tv_meter_number"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{viewModel.consumerUnit.meter}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_meter_number_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icud_tv_meter_number_title"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_meter_number_title" />

                <TextView
                    android:id="@+id/icud_tv_class_title"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/class_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icud_tv_meter_number_title"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/icud_tv_class"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{viewModel.consumerUnit.consumerClass}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_class_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icud_tv_class_title"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_class_title" />

                <TextView
                    android:id="@+id/icud_tv_phone_1_title"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/phone_1_title"
                    android:visibility="@{viewModel.consumerUnit.hasFirstPhone() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_phone_1_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_phone_1_btn" />

                <TextView
                    android:id="@+id/icud_tv_phone_1"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{viewModel.consumerUnit.firstPhone}"
                    android:visibility="@{viewModel.consumerUnit.hasFirstPhone() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_phone_1_title"
                    app:layout_constraintEnd_toStartOf="@+id/icud_tv_phone_1_btn"
                    app:layout_constraintStart_toEndOf="@+id/icud_tv_phone_1_title"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_phone_1_title" />

                <ImageButton
                    android:id="@+id/icud_tv_phone_1_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_phone_1"
                    android:onClick="@{() -> viewModel.callPhone(viewModel.consumerUnit.firstPhone)}"
                    android:visibility="@{viewModel.consumerUnit.hasFirstPhone() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icud_tv_class_title"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_local_phone_24" />

                <TextView
                    android:id="@+id/icud_tv_phone_2_title"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/phone_2_title"
                    android:visibility="@{viewModel.consumerUnit.hasSecondPhone() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_phone_2_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_phone_2_btn" />

                <TextView
                    android:id="@+id/icud_tv_phone_2"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{viewModel.consumerUnit.secondPhone}"
                    android:visibility="@{viewModel.consumerUnit.hasSecondPhone() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/icud_tv_phone_2_title"
                    app:layout_constraintEnd_toStartOf="@+id/icud_tv_phone_2_btn"
                    app:layout_constraintStart_toEndOf="@+id/icud_tv_phone_2_title"
                    app:layout_constraintTop_toTopOf="@+id/icud_tv_phone_2_title" />

                <ImageButton
                    android:id="@+id/icud_tv_phone_2_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_phone_2"
                    android:onClick="@{() -> viewModel.callPhone(viewModel.consumerUnit.secondPhone)}"
                    android:visibility="@{viewModel.consumerUnit.hasSecondPhone() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icud_tv_phone_1_btn"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_local_phone_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/as_fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
